export CGO_ENABLED=0 on building

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,3 +27,4 @@ jobs:
         goarch: ${{ matrix.goarch }}
         project_path: "./cmd/tmi"
         binary_name: tmi
+        pre_command: export CGO_ENABLED=0
